# vbz_compression

./: .bandit-profile.yml  .flake8  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  license.txt
cmake/: FindFuzzer.cmake  FindGoogleBenchmark.cmake  FindHDF5.cmake  FindSanitizers.cmake  Findzstd.cmake  ONTFindModuleHelpers.cmake  SignFile.cmake  SigningUtils.cmake  conan.cmake
docker/: Dockerfile.build_env
packaging/: hdf_plugin_packaging.cmake  postinstall.sh.in  postrm.sh.in  readme.txt  wix_extra.wxs.in  wix_patch.wxs.xml
python/: CMakeLists.txt
python/benchmark/: benchmark.py
python/fast5compress/: fast5compress  fast5vbz.py
python/pyvbz/: CMakeLists.txt  README.md  build_pyvbz.cmake  setup.py
python/pyvbz/tests/: unit
python/pyvbz/vbz/: __init__.py  build.py
python/test/: requirements_1.10.txt  requirements_1.12.txt  requirements_1.8.txt  test_repack.py  test_vbz_filter.py
test_data/: multi_fast5_vbz.fast5  multi_fast5_vbz_v1.fast5
vbz/: CMakeLists.txt  vbz.cpp  vbz.h  vbz_streamvbyte.cpp  vbz_streamvbyte.h  vbz_streamvbyte_impl.h  vbz_streamvbyte_impl_sse3.h
vbz/fuzzing/: CMakeLists.txt  dictionary.txt  vbz_fuzz.cpp  vbz_fuzz_runner.cpp
vbz/perf/: CMakeLists.txt  test_data_generator.h  vbz_perf.cpp
vbz/test/: CMakeLists.txt  streamvbyte_test.cpp  test_data.h  test_utils.h  vbz_test.cpp
vbz/v0/: vbz_streamvbyte.cpp  vbz_streamvbyte.h  vbz_streamvbyte_impl.h  vbz_streamvbyte_impl_sse3.h
vbz/v1/: vbz_streamvbyte.cpp  vbz_streamvbyte.h  vbz_streamvbyte_impl.h
vbz_plugin/: CMakeLists.txt  hdf5_dynamic.h  vbz_plugin.cpp  vbz_plugin.h  vbz_plugin_user_utils.h
vbz_plugin/hdf_test_utils/: CMakeLists.txt  hdf_id_helper.cpp  hdf_id_helper.h
vbz_plugin/perf/: CMakeLists.txt  vbz_hdf_perf.cpp
vbz_plugin/test/: CMakeLists.txt  main.cpp  test_utils.h  vbz_hdf_plugin_test.cpp
